--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ loguru==0.5.3
 requests==2.26.0
 flask==2.0.2
 flask-cors==3.0.10
+pandas==1.3.4
+termcolor==1.1.0
+psutil==5.8.0
+crc16==0.1.1
+tcp-latency==0.0.10
+beautifulsoup4==4.10.0
