--- a/deploy/Dockerfile.node
+++ b/deploy/Dockerfile.node
@@ -19,9 +19,14 @@ RUN apt-get --yes install python3-dev python3-pip python3-wheel
 RUN wget https://raw.githubusercontent.com/gdraheim/docker-systemctl-replacement/master/files/docker/systemctl3.py
 RUN cp systemctl3.py /usr/bin/systemctl
 RUN chmod +x /usr/bin/systemctl
-RUN systemctl status
 RUN wget https://raw.githubusercontent.com/igroman787/mytonctrl/master/scripts/install.sh
 RUN /bin/bash install.sh -m full
+
+# patch mytoncrtl
+ADD deploy/scripts/patch_mytonctrl.py /scripts/patch_mytonctrl.py
+ADD deploy/scripts/patch_validator.py /scripts/patch_validator.py
+RUN python3 /scripts/patch_mytonctrl.py
+RUN python3 /scripts/patch_validator.py
 
 # install python libraries
 RUN pip3 install -U pip wheel
@@ -29,5 +34,11 @@ ADD requirements.txt /tmp/requirements.txt
 RUN pip3 install -r /tmp/requirements.txt
 
 # entrypoint
-ADD . /usr/src/app
+ADD backend/ /usr/src/app/backend/
+ADD deploy/ /usr/src/app/deploy/
+ADD run_web_server.py /usr/src/app/
 WORKDIR /usr/src/app
+
+ADD deploy/scripts/run_node.sh /usr/src/app/entrypoint.sh
+RUN chmod +x /usr/src/app/entrypoint.sh
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
