--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,10 @@ services:
         - 5672:5672
     restart: always
   # web server
-  flask-backend:
+  web:
     build: 
         context: .
-        dockerfile: deploy/Dockerfile.backend
+        dockerfile: deploy/Dockerfile.web
     environment: 
         MONGO_HOST: mongodb
         MONGO_PORT: 27017
