--- a/deploy/Dockerfile.web
+++ b/deploy/Dockerfile.web
@@ -24,4 +24,4 @@ ADD . /usr/src/app
 WORKDIR /usr/src/app
 EXPOSE 8080
 
-ENTRYPOINT ["python3", "./run_web_server.py"]
+ENTRYPOINT ["python3", "./run_web_server.py", "--ip", "0.0.0.0", "--port", "8080"]
