--- a/deploy/Dockerfile.web
+++ b/deploy/Dockerfile.web
@@ -12,6 +12,7 @@ ENV LANG en_US.UTF-8
 ENV DEBIANFRONTEND=noninteractive
 RUN apt-get --yes update
 RUN apt-get --yes install python3-dev python3-pip python3-wheel
+RUN apt-get --yes install gcc g++ cmake make
 
 # install python libraries
 RUN pip3 install -U pip wheel
