--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,22 +18,6 @@ services:
     ports:
         - 5672:5672
     restart: always
-  # web server
-  web:
-    build: 
-        context: .
-        dockerfile: deploy/Dockerfile.web
-    environment: 
-        MONGO_HOST: mongodb
-        MONGO_PORT: 27017
-        MONGO_DATABASE: production_ton_monitor
-    depends_on: 
-        - mongodb
-    networks: 
-        - backend
-    ports:
-        - 8080:8080
-    restart: always
   # ton + celery
   ton-node:
     build:
@@ -54,6 +38,26 @@ services:
         - mongodb
         - rabbitmq
     restart: always
+    # web server
+    web:
+        build: 
+            context: .
+            dockerfile: deploy/Dockerfile.web
+        environment: 
+            MONGO_HOST: mongodb
+            MONGO_PORT: 27017
+            MONGO_DATABASE: production_ton_monitor
+        depends_on: 
+            - mongodb
+        networks: 
+            - backend
+        ports:
+            - 8080:8080
+        restart: always
+    # # react app
+    # frontend:
+    #     build:
+    #         context: .
 networks:
     backend:
 volumes:
